# Ray-tracing

./: CMakeLists.txt  Factory.h  README.md  Ray__tracing.vcxproj  Ray__tracing.vcxproj.filters  Shapes.h  data_f1.txt  data_s1.txt  homework5_7.cpp  homework5_7.h  homework5_7.vcxproj  homework5_7.vcxproj.filters  main.cpp  vec3.cpp  vec3.h
